--- a/style.css
+++ b/style.css
@@ -60,10 +60,6 @@ a:hover{
     width: 400px;
 }
 
-.right{
-
-}
-
 .name{
     display: flex;
     margin-bottom: 20px;
@@ -104,7 +100,7 @@ a:hover{
     width: 150px;
     height: 50px;
     margin-right: 45px;
-    border: 3px solid #3B82F6;
+    border: 2px solid #3B82F6;
     border-radius: 8px;
     background-color: #F9FAFB;
     font-weight: 600;
@@ -169,6 +165,7 @@ a:hover{
     background-color: #FFFFFF;
     box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.05);
     border-radius: 10px;
+    border: 1px solid rgb(229, 231, 235);
     padding: 0 10px 0 20px;
     transition: transform 0.3s ease;
 }
@@ -188,14 +185,16 @@ a:hover{
 
 .project-heading{
     text-align: center;
-    margin-bottom: 20px;
     margin-top: 20px;
     font-weight: 500;
     padding-top: 20px;
+    margin-bottom: 10px;
 }
 
 .project-summary{
     color: #6B7280;
+    margin-top: 20px;
+
 }
 
 .project-list{
@@ -210,4 +209,158 @@ a:hover{
 
 .project-card:hover{
     transform: scale(1.05)
+}
+
+.skills{
+    width: 100%;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.skills-heading{
+    color: #111827;
+    border-bottom: 3px solid #3B82F6;
+}
+
+.skills-container{
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+.skills-card{
+    height: 300px;
+    width: 300px;
+    background-color: #FFFFFF;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.05);
+    transition: transform 0.3s ease;
+    border: 1px solid rgb(229, 231, 235);
+}
+
+.skills-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    list-style-type: none;
+    height: 200px;
+    margin-top: 10px;
+}
+
+.skills-name{
+    text-align: center;
+    color: #111827;
+    font-weight: 400;
+    margin-top: 20px;
+    padding-bottom: 10px;
+}
+
+.skills-list li i{
+    margin: 0 20px;
+    color: #3B82F6;
+}
+
+.skills-list li{
+    color: #6B7280;
+}
+
+.skills-card:hover{
+    transform: scale(1.05);
+}
+
+.contact{
+    width: 100%;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-heading{
+    color: #111827;
+    padding-bottom: 5px;
+    border-bottom: 3px solid #3B82F6;
+    margin-bottom: 60px;
+}
+
+#name,#email{
+    width: 600px;
+    height: 40px;
+    padding-left: 10px;
+    font-size: large;
+    border-radius: 5px;
+    border: 1px solid lightgray;
+
+}
+
+#message{
+    width: 600px;
+    height: 100px;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-top: 10px;
+    font-size: large;
+    border-radius: 5px;
+    border: 1px solid lightgray;
+}
+
+.form{
+    width: auto;
+    height: 340px;
+    background-color: #FFFFFF;
+    padding: 30px 60px 60px 60px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.05);
+}
+
+.form-name{
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 500;
+    color: #6B7280;
+}
+
+#name:focus,#email:focus,#message:focus{
+    border: 1px solid #3B82F6;
+}
+
+.form button{
+    margin-top: 20px;
+    margin-bottom: none;
+}
+
+.social{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.email,.github,.linkedin{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 140px;
+}
+
+.email i,.github i,.linkedin i{
+    color: #3B82F6;
+}
+
+footer{
+    background-color: #FFFFFF;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-text{
+    color: #6B7280;
 }
